--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,16 @@
           </ul>
           <ul class="images-container list">
             <li class="images-item">
-              <img class="portfolio-logos" src="./images/port1.jpg" alt="ноутбук" width="370" />
+              <div class="overlay-thumb">
+                <img class="portfolio-logos" src="./images/port1.jpg" alt="ноутбук" width="370" />
+                <div class="overlay-cover">
+                  <p class="overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="pictures-text">
                 <h2 class="tech-title">Технокряк</h2>
                 <p class="tech-text">Веб-сайт</p>
