finished Studio-Page

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
             <li class="picture-item">
               <div class="image-thumb">
                 <img src="./images/logo2.jpg" alt="Набор текста на клавиатуре" width="370" />
+                <div class="box-1">
+                  <h3 class="thumb-title">Десктопные приложения</h3>
+                </div>
               </div>
             </li>
             <li class="picture-item">
@@ -130,6 +133,9 @@
             <li class="picture-item">
               <div class="image-thumb">
                 <img src="./images/logo3.jpg" alt="Работа за планшетом" width="370" />
+                <div class="box-3">
+                  <h3 class="thumb-title">Дизайнерские решения</h3>
+                </div>
               </div>
             </li>
           </ul>
