--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,9 @@
         <nav>
           <ul class="site-nav list">
             <li class="item"><a href="./index.html" class="link">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
