--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
           </ul>
           <ul class="images-container list">
             <li class="images-item">
-              <div class="overlay-thumb">
+              <div class="img-thumb">
                 <img class="portfolio-logos" src="./images/port1.jpg" alt="ноутбук" width="370" />
                 <div class="overlay-cover">
                   <p class="overlay-text">
@@ -79,76 +79,155 @@
               </div>
             </li>
             <li class="images-item">
-              <img
-                class="portfolio-logos"
-                src="./images/port2.jpg"
-                alt="баскетболисты"
-                width="370"
-              />
+              <div class="img-thumb">
+                <img
+                  class="portfolio-logos"
+                  src="./images/port2.jpg"
+                  alt="баскетболисты"
+                  width="370"
+                />
+                <div class="overlay-cover">
+                  <p class="overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+              </div>
               <div class="pictures-text">
                 <h2 class="tech-title">Постер New Orlean vs Golden Star</h2>
                 <p class="tech-text">Дизайн</p>
               </div>
             </li>
             <li class="images-item">
-              <img class="portfolio-logos" src="./images/port3.jpg" alt="рыба" width="370" />
+              <div class="img-thumb">
+                <img class="portfolio-logos" src="./images/port3.jpg" alt="рыба" width="370" />
+                <div class="overlay-cover">
+                  <p class="overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="pictures-text">
                 <h2 class="tech-title">Ресторан Seafood</h2>
                 <p class="tech-text">Приложение</p>
               </div>
             </li>
             <li class="images-item">
-              <img class="portfolio-logos" src="./images/port4.jpg" alt="наушники" width="370" />
+              <div class="img-thumb">
+                <img class="portfolio-logos" src="./images/port4.jpg" alt="наушники" width="370" />
+                <div class="overlay-cover">
+                  <p class="overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="pictures-text">
                 <h2 class="tech-title">Проект Prime</h2>
                 <p class="tech-text">Маркетинг</p>
               </div>
             </li>
             <li class="images-item">
-              <img class="portfolio-logos" src="./images/port5.jpg" alt="коробки" width="370" />
+              <div class="img-thumb">
+                <img class="portfolio-logos" src="./images/port5.jpg" alt="коробки" width="370" />
+                <div class="overlay-cover">
+                  <p class="overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="pictures-text">
                 <h2 class="tech-title">Проект Boxes</h2>
                 <p class="tech-text">Приложение</p>
               </div>
             </li>
             <li class="images-item">
-              <img
-                class="portfolio-logos"
-                src="./images/port6.jpg"
-                alt="компьютер-моноблок"
-                width="370"
-              />
+              <div class="img-thumb">
+                <img
+                  class="portfolio-logos"
+                  src="./images/port6.jpg"
+                  alt="компьютер-моноблок"
+                  width="370"
+                />
+                <div class="overlay-cover">
+                  <p class="overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="pictures-text">
                 <h2 class="tech-title">Inspiration has no Borders</h2>
                 <p class="tech-text">Веб-сайт</p>
               </div>
             </li>
             <li class="images-item">
-              <img
-                class="portfolio-logos"
-                src="./images/port7.jpg"
-                alt="раскрытая книга"
-                width="370"
-              />
+              <div class="img-thumb">
+                <img
+                  class="portfolio-logos"
+                  src="./images/port7.jpg"
+                  alt="раскрытая книга"
+                  width="370"
+                />
+                <div class="overlay-cover">
+                  <p class="overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="pictures-text">
                 <h2 class="tech-title">Издание Limited Edition</h2>
                 <p class="tech-text">Дизайн</p>
               </div>
             </li>
             <li class="images-item">
-              <img class="portfolio-logos" src="./images/port8.jpg" alt="бирка" width="370" />
+              <div class="img-thumb">
+                <img class="portfolio-logos" src="./images/port8.jpg" alt="бирка" width="370" />
+                <div class="overlay-cover">
+                  <p class="overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="pictures-text">
                 <h2 class="tech-title">Проект LAB</h2>
                 <p class="tech-text">Маркетинг</p>
               </div>
             </li>
             <li class="images-item">
-              <img
-                class="portfolio-logos"
-                src="./images/port9.jpg"
-                alt="работа за ноубуком"
-                width="370"
-              />
+              <div class="img-thumb">
+                <img
+                  class="portfolio-logos"
+                  src="./images/port9.jpg"
+                  alt="работа за ноубуком"
+                  width="370"
+                />
+                <div class="overlay-cover">
+                  <p class="overlay-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="pictures-text">
                 <h2 class="tech-title">Growing Business</h2>
                 <p class="tech-text">Приложение</p>
