--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close class="close-button">
-          <svg class="close-icon" width="18" heights="18">
+          <svg class="close-icon">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
